0.43  Added bindable readline commands rlwrap-direct-keypress and
      rlwrap-hotkey

      Playing back a readline macro consisting of more than one line
      would crash with SIGSEGV

      rlwrap with negative --histsize would fail when there is no
      history file yet.

      An empty prompt would make $filter->{cumulative_output} miss
      its last line 

      Pre-given (-P) input would only be put in input line after
      cooking timeout (usually 40 msec)

0.42  Added --mirror-arguments (-U) option 

      On SunOS tcgetattr(slave pty) failed with "Invalid argument" 

      If the completion list contained two words, one of which a
      prefix of the other (e.g. "sea" and "seagull") the shorter one would
      be skipped when displaying a list of completions

      reading completion files (with the -f option, or from
      $RLWRAP_HOME/<command>_completions) could fail with an incorrect
      ENOENT ("No such file or directory")

      rlwrap -z listing wouldn't list filters
      
      When both master and slave pty are unfit for sensing slave
      commands terminal settings, rlwrap now bails out with an error
      "cannot determine terminal mode of slave command"


0.41  Slightly late SIGCHLD could cause an I/O error on master pty

      Added -W (-polling) option to poll slave pty for changes in its 
      interrupt character and ISIG flag.

      if $TERM is not found in termcap/terminfo database, use vt100

0.40  configure will now find tgetent() in libtinfo 

      compiling with gcc -O2 made rlwrap hang after CTRL-D on empty line
      
      HP-UX 11 has weird tgetent() return values, confusing rlwrap 

      On Solaris, rlwrap would sometimes fail with "TIOCSWINSZ failed on 
      slave pty"
   
      Single quote ' is now word-breaking by default 

      multi-line edit would mangle upper ASCII and UTF-8 (and still does 
      that to UTF16 :( ) 

      added --extra-char-after-completion and -multi-line-ext options
